# nextcloud-mcp-server

./: .dockerignore  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  Dockerfile  README.md  attach_and_embed_image.py  attach_image.py  check_updated_note.py  docker-compose.yml  env.sample  main.py  pyproject.toml  renovate.json  sample_image.py  tables-openapi.json  test_delete_note_with_attachment.py  update_content_with_image_reference.py  update_image_reference.py  update_webdav_auth.py  verify_image_attachment.py
.github/workflows/: bump-version.yml  docker-build-publish.yml  test.yml
app-hooks/post-installation/: install-calendar-app.sh  install-contacts-app.sh  install-deck-app.sh  install-notes-app.sh  install-tables-app.sh
docs/: ADR-001-enhanced-note-search.md  calendar.md  calender.md  contacts.md  deck.md  nextcloud_notes_image_embedding.md  notes.md  table.md  webdav.md
nextcloud_mcp_server/: app.py  base_client.py  client.py  config.py  middleware.py  notes_client.py  server.py  tables_client.py  utils.py  webdav_client.py
nextcloud_mcp_server/client/: __init__.py  base.py  calendar.py  contacts.py  deck.py  notes.py  tables.py  webdav.py
nextcloud_mcp_server/controllers/: __init__.py  notes_search.py
nextcloud_mcp_server/models/: __init__.py  base.py  calendar.py  contacts.py  deck.py  notes.py  tables.py  webdav.py
nextcloud_mcp_server/server/: __init__.py  calendar.py  contacts.py  deck.py  notes.py  tables.py  webdav.py
tests/: conftest.py  test_client.py  test_embedded_images.py  test_models.py  test_note_attachment_cleanup.py  test_note_image_integration.py
tests/integration/: test_attachments.py  test_calendar_operations.py  test_contacts_mcp.py  test_contacts_operations.py  test_deck_api.py  test_deck_mcp.py  test_embedded_images.py  test_error_propagation.py  test_field_preservation.py  test_mcp.py  test_multi_user.py  test_notes_api.py  test_tables_api.py  test_webdav_cleanup.py  test_webdav_operations.py
