[project]
name = "nextcloud-mcp-server"
version = "0.6.0"
description = ""
authors = [
    {name = "Chris Coutinho",email = "chris@coutinho.io"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "mcp[cli] (>=1.10,<1.11)",
    "httpx (>=0.28.1,<0.29.0)",
    "pillow (>=11.2.1,<12.0.0)",
    "icalendar (>=6.0.0,<7.0.0)"
]

[project.scripts]
nc-mcp-server = "nextcloud_mcp_server.server:run"

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_test_loop_scope = "session"
asyncio_default_fixture_loop_scope = "session"
log_cli = 1
log_cli_level = "WARN"
log_level = "WARN"
markers = [
    "integration: marks tests as slow (deselect with '-m \"not slow\"')"
]

[tool.commitizen]
name = "cz_conventional_commits"
tag_format = "v$version"
version_scheme = "pep440"
version_provider = "uv"
update_changelog_on_bump = true
major_version_zero = true

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "commitizen>=4.8.2",
    "ipython>=9.2.0",
    "pytest>=8.3.5",
    "pytest-asyncio>=1.0.0",
    "pytest-cov>=6.1.1",
    "ruff>=0.11.13",
]
